--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>teste final</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    <h1 id="titulo">E-commerce</h1>
-    <img id="playstation" src="https://imgs.casasbahia.com.br/1568134334/1xg.jpg" width="px" height="45px" >
-    
-
+    <h1 >E-commerce</h1>
+    <h1>playstation</h1>
+    <div class="Produtos">
+        <img src="https://imgs.casasbahia.com.br/1568134334/1xg.jpg" >
+        <img src="https://i.zst.com.br/thumbs/12/17/2c/-1122829420.jpg">
+        <img src="https://images.tcdn.com.br/img/img_prod/993382/console_playstation_5_ea_sports_fc_24_845_1_a5bd98d8637866eb1cda40ef27fabe36.png" alt="">
+        <img src="https://m.media-amazon.com/images/I/61rApRFkOeL.jpg" alt="">
+        <img src="https://cdn.awsli.com.br/800x800/2111/2111611/produto/138750395/e59729d58a.jpg" alt="">
+        <img src="https://http2.mlstatic.com/D_NQ_NP_802376-MLU72933100291_112023-O.webp" alt="">
+        <img src="https://m.media-amazon.com/images/I/51Gz7IimgoL._AC_UF1000,1000_QL80_.jpg" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcuYdkjJeUg09B9ox7KYmdSpUPqqNw8L4Ijw&s" alt="">
+        <img src="" alt="">
+    </div>
 </body>
 </html>
